Fixed spacing issue with Heroes

--- a/src/app/components/action-button/action-button.component.scss
+++ b/src/app/components/action-button/action-button.component.scss
@@ -5,7 +5,7 @@
   margin: 1em;
 
   button {
-    height: 5em;
+    height: 3.5em;
   }
 
   span {
