--- a/src/app/components/status-bar/status-bar.component.scss
+++ b/src/app/components/status-bar/status-bar.component.scss
@@ -8,6 +8,7 @@
 ul {
   list-style-type: none;
   display: inline;
+  padding-left: 0;
 
   li {
     display: inline;
